# Project-Babel-Skype-

./: CMakeLists.txt  README.md  conan_installer.sh  conanfile.txt
client/: CMakeLists.txt  main.cpp
client/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
client/SettingsWindow/: settingswindow.cpp  settingswindow.h
client/TcpManager/: tcpmanager.cpp  tcpmanager.h
client/UdpManager/: udpmanager.cpp  udpmanager.h
documentation/: README.md
server/: Connection.cpp  Connection.h  ServerManager.cpp  ServerManager.h  main.cpp
